#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[84] --> Fix loot GunShip.
[83] --> Add Name Developer Announce.
[82] --> Add Name Admin, GameMaster and Guard Announces.
[81] --> Fix Sindragosa (Final version!).
[80] --> Update CCDelay by Diton.
[79] --> Core/Resistances:
          - Remove Holy Resistance from Players
          - Do not add Holy Resist from Items to Players
          - Resistance Handling from Holy resist removed
          Signed-off-by: Pointerxx <marvin.wichmann@web.de>
[78] --> Fix Sindragosa (Test!).
[77] --> Fix autocast petspells.
[76] --> Misc fixs: (Test!)
         - Fix Totems LOS.
         - Fix combatstop spells Invisible, Shadow. Trigger, Shadowmeld.
         - Fix Rogue: Vanish.
         - Fix Mage: Water Elemental.
         - Fix problem pets. (If you are dismounted, your pet had 1hp.)
[75] --> Fix Shaman: Earthbind Totem.
[74] --> Fix Paladin: Righteous Defense.
[73] --> Update CCDelay.
[72] --> Fix Grounding Totem.
[71] --> Fix Priest: Shadowform.
[70] --> Fixed [Item] Wrathful Gladiator's Dreadplate Gauntlets.
[69] --> Add Npc Top 10 Arena Teams.
[68] --> Alternate script Gunship by fiveofeight.
[67] --> Add Scripts/Trial Of The Champion.
[66] --> Scripts/Headless Horseman: Cleanup.
[65] --> [ICC][Lich King] Fix Val'kyr Shadowguard.
[64] --> Fix Quests Argent Tournament.
[63] --> Fix Evade (Test).
[62] --> Core/Maps: Merge some changes to GetHeight Calculation.
[61] --> Fix Death Knight: Death and Decay.
[60] --> Fix Priest: Shadowfiend.
[59] --> Fix Sap removes Stealth.
[58] --> Fix [Warlock] Chaos Bolt.
         - "Chaos Bolt cannot be resisted, and pierces through all absorption effects."